--- a/mvc-web/.settings/org.eclipse.wst.common.component
+++ b/mvc-web/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="mvc-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mvc-common/mvc-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="mvc-web"/>
         <property name="java-output-path" value="/mvc-web/target/classes"/>
     </wb-module>
